[gd_scene load_steps=2 format=3 uid="uid://dsj6kj5vycuc0"]

[ext_resource type="Script" uid="uid://c1ywr1imnnxw6" path="res://scenes/ui.gd" id="1_nt7q6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="Panel" type="Panel" parent="."]
offset_left = 6.0
offset_top = 5.0
offset_right = 185.0
offset_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0027933
anchor_right = 1.00279
anchor_bottom = 1.0
offset_left = 0.5
offset_right = -0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="CrystalEnergyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day: 1"

[node name="GardenerEnergyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 60"

[node name="HungerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Villager Hunger: 50%"

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
